<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="20dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/turnNameElement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/bold"
                        android:text="@string/turnInfoName"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/TurnAuthorElement"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/light"
                            android:paddingRight="8dp"
                            android:text="@string/turnInfoAuthor"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/turnSizeElement"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/light"
                            android:text="@string/turnInfoSize"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/JoinBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="35sp"
                        android:layout_gravity="right"
                        android:backgroundTint="@color/orange"
                        android:paddingLeft="38dp"
                        android:paddingRight="38dp"
                        android:text="@string/turnInfoJoin"
                        android:textSize="13sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/turnDescElement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/light"
                android:paddingTop="5dp"
                android:paddingBottom="15dp"
                android:text="@string/turnInfoDesc"
                android:textSize="12sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>