<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".CreateTurnActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="25dp"
                    android:paddingTop="30dp"
                    android:paddingRight="25dp"
                    android:paddingBottom="120dp">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/exobold"
                            android:text="@string/mainTextCreate"
                            android:textColor="@color/white"
                            android:textSize="30sp" />
                    </FrameLayout>

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="20dp"
                        android:text="@string/mainTextCreatedesc"
                        android:textColor="@color/colorTextSecond"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/nameTurnCreatetxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/exoregular"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/nameTurnCreate"
                        android:textColor="@color/colorTextSecond"
                        android:textSize="11sp" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/colorBlock"
                        app:cardCornerRadius="30dp"
                        app:cardElevation="0dp">

                        <EditText
                            android:id="@+id/editText2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:fontFamily="@font/exoregular"
                            android:gravity="center_vertical"
                            android:hint="@string/nameTurn"
                            android:inputType="text"
                            android:paddingStart="20dp"
                            android:paddingLeft="20dp"
                            android:paddingTop="20dp"
                            android:paddingEnd="10dp"
                            android:paddingRight="20dp"
                            android:paddingBottom="20dp"
                            android:textColor="@color/colorTextSecond"
                            android:textColorHint="@color/notImportant"
                            android:textSize="20sp" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/descriptionBoxCreatetxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/exoregular"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/descriptionTurnCreate"
                        android:textColor="@color/colorTextSecond"
                        android:textSize="11sp" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/colorBlock"
                        app:cardCornerRadius="30dp"
                        app:cardElevation="0dp">

                        <EditText
                            android:id="@+id/editText3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:ems="10"
                            android:fontFamily="@font/exoregular"
                            android:gravity="start|center_vertical"
                            android:hint="@string/editing2"
                            android:inputType="text"
                            android:paddingStart="20dp"
                            android:paddingLeft="20dp"
                            android:paddingTop="20dp"
                            android:paddingEnd="10dp"
                            android:paddingRight="20dp"
                            android:paddingBottom="20dp"
                            android:textColor="@color/colorTextSecond"
                            android:textColorHint="@color/notImportant"
                            android:textSize="20sp" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/groupstxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/exoregular"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/groupsCreate"
                        android:textColor="@color/colorTextSecond"
                        android:textSize="11sp" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/colorBlock"
                        app:cardCornerRadius="30dp"
                        app:cardElevation="0dp">

                        <EditText
                            android:id="@+id/createAllowGroup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:ems="10"
                            android:fontFamily="@font/exoregular"
                            android:gravity="center_vertical"
                            android:hint="@string/allowgroupsTurn"
                            android:inputType="text"
                            android:paddingStart="20dp"
                            android:paddingLeft="20dp"
                            android:paddingTop="20dp"
                            android:paddingEnd="10dp"
                            android:paddingRight="20dp"
                            android:paddingBottom="20dp"
                            android:textColor="@color/colorTextSecond"
                            android:textColorHint="@color/notImportant"
                            android:textSize="20sp" />

                    </androidx.cardview.widget.CardView>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/allowRec"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="10dp" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/gradient_background"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingTop="20dp"
            android:paddingRight="40dp"
            android:paddingBottom="20dp">

            <Button
                android:id="@+id/createBtnCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorMain"
                android:fontFamily="@font/exosemibold"
                android:text="@string/createBtnCreate"
                android:textColor="@color/colorText"
                android:textColorHighlight="@color/colorMain"
                android:textSize="16sp"
                app:rippleColor="@color/colorMain" />

            <Button
                android:id="@+id/backBtnCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00E9EFF2"
                android:backgroundTint="@color/background"
                android:fontFamily="@font/exosemibold"
                android:onClick="ExitfromCreateTurn"
                android:text="@string/cancelBtnCreate"
                android:textColor="@color/colorMain"
                android:textColorHighlight="@color/colorMain"
                android:textSize="16sp"
                app:rippleColor="@color/colorMain" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>