<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainScreen">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ellipse_14" />

                    <TextView
                        android:id="@+id/mainPageText2"
                        android:layout_width="wrap_content"
                        android:layout_height="22dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="3dp"
                        android:text="@string/MainMain"
                        android:textColor="@color/mainColorText"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.017"
                        app:layout_constraintStart_toStartOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="@+id/imageView" />

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp"
                    android:paddingRight="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/usernameTxt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Имя пользователя"
                                android:textColor="@color/titleText"
                                android:textSize="10sp" />

                            <TextView
                                android:id="@+id/userNameMainTxt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingBottom="10dp"
                                android:text="@string/nametxt"
                                android:textColor="@color/titleText"
                                android:textSize="20sp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:paddingRight="15dp">

                                    <TextView
                                        android:id="@+id/statusTxt"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="0dp"
                                        android:layout_marginTop="0dp"
                                        android:text="@string/StatusMain"
                                        android:textColor="@color/titleText"
                                        android:textSize="10sp"
                                        app:layout_constraintEnd_toEndOf="@+id/usernameTxt"
                                        app:layout_constraintHorizontal_bias="0.0"
                                        app:layout_constraintStart_toStartOf="@+id/usernameTxt"
                                        app:layout_constraintTop_toTopOf="parent" />

                                    <TextView
                                        android:id="@+id/statusMainTxt"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="0dp"
                                        android:layout_marginTop="0dp"
                                        android:text="@string/status"
                                        android:textColor="@color/titleText"
                                        app:layout_constraintHorizontal_bias="0.0"
                                        app:layout_constraintStart_toStartOf="@+id/statusTxt" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/groupTxt"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="0dp"
                                        android:text="@string/GroupMain"
                                        android:textColor="@color/titleText"
                                        android:textSize="10sp"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintHorizontal_bias="0.166"
                                        app:layout_constraintStart_toEndOf="@+id/statusTxt"
                                        app:layout_constraintTop_toTopOf="parent" />

                                    <TextView
                                        android:id="@+id/groupMainTxt"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="0dp"
                                        android:layout_marginTop="0dp"
                                        android:text="@string/groupNumber"
                                        android:textColor="@color/titleText"
                                        app:layout_constraintEnd_toEndOf="@+id/groupTxt"
                                        app:layout_constraintHorizontal_bias="0.0"
                                        app:layout_constraintStart_toStartOf="@+id/groupTxt"
                                        app:layout_constraintTop_toTopOf="@+id/groupTxt" />
                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_gravity="right"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/bETU"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="0dp"
                                    android:backgroundTint="#F4694D"
                                    android:text="@string/etuid"
                                    android:textColor="@color/mainColor"
                                    android:textIsSelectable="false"
                                    android:textSize="20sp"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintHorizontal_bias="0.852"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <ImageButton
                                    android:id="@+id/exitBtn"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="right"
                                    android:background="@color/background"
                                    android:backgroundTint="@color/background"
                                    android:src="@drawable/exit" />
                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="15dp">

                        <Button
                            android:id="@+id/bMy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/background"
                            android:text="@string/ButtonMyTextMain"
                            android:textColor="@color/mainColor" />

                        <Button
                            android:id="@+id/MainScreenInDostupBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/background"
                            android:backgroundTintMode="add"
                            android:text="@string/ButtonInDostupTextMain"
                            android:textAllCaps="false"
                            android:textColor="@color/mainColor" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/turnsRec"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/gradient_background"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingTop="30dp"
            android:paddingRight="40dp"
            android:paddingBottom="20dp">

            <Button
                android:id="@+id/CreateTurnBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/mainButton"
                android:onClick="CreateTurn"
                android:text="@string/ButtonCreateTurnTextMain"
                android:textColor="@color/mainButtonText"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>

    </FrameLayout>

</LinearLayout>